--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -6,10 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Methods for Adding CSS</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+      .two {
+        background-color: green;
+        color: white;
+      }
+    </style>
   </head>
   <body>
-    <div id="one">Style me via the external method!</div>
-    <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <h1 id="one">Style me via the external method!</h1>
+    <p = class="two">I would like to be styled with the internal method, please.</p>
+    <button style="background-color:orange">Inline Method</button>
   </body>
 </html>
